# codingtask_cpp

./: CMakeLists.txt  README.md  main.cpp
datastructure/: insert_tree.cpp
geekforgeek/: MirrorTree.cpp  MirrorTree.h  bigIntSum.cpp  bigIntSum.h  tree.cpp  tree.h
hackerrank/: accessing_inherited-functions.cpp  array_sum.cpp  basic_data_type.cpp  magic_spells.cpp  shift_vector.cpp
leetcode/: SolutionSearch2DMatrix.cpp  SolutionSearch2DMatrix.h  balanced_binary_tree.cpp  balanced_binary_tree.h  balanced_binary_tree_test.cpp  combinations.cpp  combinations.h  combinations_test.cpp  single_number_3.cpp  single_number_3_test.cpp
